--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aureooms-js-collections",
+  "name": "aureooms-js-collections-dict",
   "description": "Collections library for JavaScript",
   "version": "2.0.0",
   "author": "Aurélien Ooms <aurelien.ooms@gmail.com>",
@@ -20,7 +20,7 @@
     }
   },
   "bugs": {
-    "url": "https://github.com/aureooms/js-collections/issues"
+    "url": "https://github.com/aureooms/js-collections-dict/issues"
   },
   "dependencies": {
     "aureooms-js-compare": "^1.4.5",
@@ -41,7 +41,7 @@
     "esdoc": "^0.4.8",
     "nyc": "^8.4.0"
   },
-  "homepage": "http://aureooms.github.io/js-collections/",
+  "homepage": "http://aureooms.github.io/js-collections-dict/",
   "keywords": [
     "bisect",
     "collection",
@@ -59,7 +59,7 @@
   "license": "AGPL-3.0",
   "main": "lib/index.js",
   "repository": {
-    "url": "https://github.com/aureooms/js-collections.git",
+    "url": "https://github.com/aureooms/js-collections-dict.git",
     "type": "git"
   },
   "scripts": {
