--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aureooms-js-collections-dict",
+  "name": "@aureooms/js-collections-dict",
   "description": "Collections library for JavaScript",
   "version": "3.0.0",
   "author": "Aurélien Ooms <aurelien.ooms@gmail.com>",
@@ -23,13 +23,13 @@
     "url": "https://github.com/aureooms/js-collections-dict/issues"
   },
   "dependencies": {
-    "aureooms-js-error": "^3.0.0",
-    "aureooms-js-mapping": "^3.0.0"
+    "@aureooms/js-error": "^3.0.0",
+    "@aureooms/js-mapping": "^3.0.0"
   },
   "devDependencies": {
-    "aureooms-js-compare": "^1.4.5",
-    "aureooms-js-functools": "^2.0.3",
-    "aureooms-js-itertools": "^3.1.1",
+    "@aureooms/js-compare": "^1.4.5",
+    "@aureooms/js-functools": "^2.0.3",
+    "@aureooms/js-itertools": "^3.1.1",
     "ava": "^0.18.0",
     "babel-cli": "^6.18.0",
     "babel-polyfill": "^6.16.0",
