--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-preset-latest": "^6.16.0",
     "codeclimate-test-reporter": "^0.4.0",
     "coveralls": "^2.11.15",
-    "esdoc": "^0.5.1",
+    "esdoc": "^1.1.0",
     "nyc": "^11.0.0",
     "@babel/cli": "7.8.4",
     "@babel/core": "7.9.0",
@@ -73,6 +73,7 @@
     "build": "rm -rf lib && babel src -d lib",
     "cover": "nyc --reporter=lcov npm test",
     "prepublish": "npm run build",
-    "test": "ava ./test/src"
+    "test": "ava ./test/src",
+    "esdoc": "esdoc"
   }
 }
