:books: docs: Update GitHub pages links.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "files": [
     "lib"
   ],
-  "homepage": "http://aureooms.github.io/js-collections-dict/",
+  "homepage": "http://make-github-pseudonymous-again.github.io/js-collections-dict/",
   "keywords": [
     "bisect",
     "collection",
