:robot: chore(package.json): Use https for homepage URL.
These changes were automatically generated by a transform whose code can be found at:
  - https://github.com/make-github-pseudonymous-again/rejuvenate/blob/1b5252aec880aa76850f97b16980a6ce00c782c4/src/transforms/package.json:homepage-use-https.js
Please contact the author of the transform if you believe there was an error.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "files": [
     "lib"
   ],
-  "homepage": "http://collection-abstraction.github.io/dict",
+  "homepage": "https://collection-abstraction.github.io/dict",
   "keywords": [
     "bisect",
     "collection",
