:robot: chore(package.json): Remove .git suffix of repository URL.
These changes were automatically generated by a transform whose code can be found at:
  - https://github.com/make-github-pseudonymous-again/rejuvenate/blob/1b5252aec880aa76850f97b16980a6ce00c782c4/src/transforms/package.json:repository-url-remove-git-suffix.js
Please contact the author of the transform if you believe there was an error.

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   "license": "AGPL-3.0",
   "main": "lib/index.js",
   "repository": {
-    "url": "https://github.com/collection-abstraction/dict.git",
+    "url": "https://github.com/collection-abstraction/dict",
     "type": "git"
   },
   "scripts": {
