--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "devDependencies": {
     "@babel/cli": "7.13.10",
     "@babel/core": "7.13.10",
-    "@babel/polyfill": "7.12.1",
     "@babel/preset-env": "7.13.10",
     "@babel/register": "7.13.8",
     "@functional-abstraction/functools": "^3.0.2",
@@ -67,6 +66,7 @@
     "fixpack": "4.0.0",
     "np": "7.4.0",
     "power-assert": "1.6.1",
+    "regenerator-runtime": "0.13.9",
     "xo": "0.42.0"
   },
   "ava": {
@@ -74,7 +74,7 @@
       "test/src/**/*"
     ],
     "require": [
-      "@babel/polyfill",
+      "regenerator-runtime/runtime",
       "@babel/register"
     ],
     "timeout": "1m"
