:robot: chore: Add build-docs script.
These changes were automatically generated by a transform whose code can be found at:
  - https://github.com/make-github-pseudonymous-again/rejuvenate/blob/1b5252aec880aa76850f97b16980a6ce00c782c4/src/transforms/docs:build-setup.js
Please contact the author of the transform if you believe there was an error.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "scripts": {
     "build": "rm -rf lib && babel src -d lib",
+    "build-docs": "esdoc",
     "cover": "c8 --all --src src --reporter=lcov npm test",
     "esdoc": "esdoc",
     "lint-config": "fixpack --dryRun",
