:robot: config(github): Configure workflow to automate gh-pages generation.
These changes were automatically generated by a transform whose code can be found at:
  - https://github.com/make-github-pseudonymous-again/rejuvenate/blob/1b5252aec880aa76850f97b16980a6ce00c782c4/src/transforms/github:workflow-configure-gh-pages.js
Please contact the author of the transform if you believe there was an error.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "scripts": {
     "build": "rm -rf lib && babel src -d lib",
     "build-docs": "esdoc",
+    "build-gh-pages": "npm run build-docs",
     "cover": "c8 --all --src src --reporter=lcov npm test",
     "lint-config": "fixpack --dryRun",
     "lint-config-and-fix": "fixpack || fixpack",
