--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "build": "rm -rf lib && babel src -d lib",
     "build-docs": "esdoc",
     "build-gh-pages": "npm run build-docs",
+    "commit-msg": "commitlint --edit",
     "cover": "c8 --all --src src --reporter=lcov npm test",
     "install-hooks": "husky install",
     "lint-config": "fixpack --dryRun",
@@ -54,8 +55,10 @@
     "@babel/core": "7.13.10",
     "@babel/preset-env": "7.13.10",
     "@babel/register": "7.13.8",
+    "@commitlint/cli": "13.1.0",
     "@functional-abstraction/functools": "^3.0.2",
     "@iterable-iterator/sorted": "^1.0.0",
+    "@js-library/commitlint-config": "0.0.4",
     "@total-order/lex": "^1.0.0",
     "@total-order/primitive": "^1.0.1",
     "ava": "3.15.0",
