--- a/package.json
+++ b/package.json
@@ -139,7 +139,22 @@
         ]
       },
       "development": {
-        "sourceMaps": "inline"
+        "sourceMaps": "inline",
+        "presets": [
+          "babel-preset-power-assert"
+        ],
+        "plugins": [
+          [
+            "transform-remove-console",
+            {
+              "exclude": [
+                "log",
+                "error",
+                "warn"
+              ]
+            }
+          ]
+        ]
       }
     }
   }
