--- a/package.json
+++ b/package.json
@@ -103,7 +103,17 @@
       ]
     ],
     "env": {
-      "debug": {},
+      "debug": {
+        "presets": [
+          [
+            "@babel/preset-env",
+            {
+              "targets": "current node"
+            }
+          ],
+          "babel-preset-power-assert"
+        ]
+      },
       "cover": {
         "sourceMaps": "both",
         "presets": [
