--- a/package.json
+++ b/package.json
@@ -156,7 +156,21 @@
           ]
         ]
       },
-      "production": {}
+      "production": {
+        "plugins": [
+          "babel-plugin-unassert",
+          [
+            "transform-remove-console",
+            {
+              "exclude": [
+                "log",
+                "error",
+                "warn"
+              ]
+            }
+          ]
+        ]
+      }
     }
   }
 }
