--- a/package.json
+++ b/package.json
@@ -27,12 +27,25 @@
     "map"
   ],
   "sideEffects": false,
-  "main": "lib/index.js",
+  "source": "src/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.module.js",
+  "esmodule": "dist/index.modern.js",
+  "umd:main": "dist/index.umd.js",
+  "unpkg": "dist/index.umd.js",
+  "exports": {
+    ".": {
+      "browser": "./dist/index.module.js",
+      "umd": "./dist/index.umd.js",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.modern.js"
+    }
+  },
   "files": [
-    "lib"
+    "dist"
   ],
   "scripts": {
-    "build": "rm -rf lib && babel src -d lib",
+    "build": "NODE_ENV=production microbundle",
     "build-docs": "esdoc",
     "build-gh-pages": "npm run build-docs",
     "commit-msg": "commitlint --edit",
@@ -52,7 +65,6 @@
     "@iterable-iterator/mapping": "^8.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.13.10",
     "@babel/core": "7.13.10",
     "@babel/preset-env": "7.13.10",
     "@babel/register": "7.13.8",
@@ -74,6 +86,7 @@
     "esdoc-standard-plugin": "1.0.0",
     "fixpack": "4.0.0",
     "husky": "7.0.1",
+    "microbundle": "0.13.1",
     "np": "7.4.0",
     "pinst": "2.1.6",
     "power-assert": "1.6.1",
