:robot: chore: Add test key in .babel.env.
These changes were automatically generated by a transform whose code can be found at:
  - https://github.com/make-github-pseudonymous-again/rejuvenate/blob/1b5252aec880aa76850f97b16980a6ce00c782c4/src/transforms/package.json:ensure-babel-env-test.js
Please contact the author of the transform if you believe there was an error.

--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
           "babel-preset-power-assert"
         ]
       },
+      "test": {},
       "cover": {
         "sourceMaps": "both",
         "presets": [
