--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "timeout": "1m"
   },
   "babel": {
+    "sourceMaps": true,
     "presets": [
       [
         "@babel/preset-env",
@@ -175,7 +176,6 @@
         ]
       },
       "development": {
-        "sourceMaps": "inline",
         "presets": [
           "babel-preset-power-assert"
         ],
