--- a/package.json
+++ b/package.json
@@ -75,10 +75,10 @@
   "devDependencies": {
     "@babel/core": "7.24.0",
     "@babel/preset-env": "7.24.0",
-    "@babel/register": "7.23.7",
     "@commitlint/cli": "19.0.3",
     "@iterable-iterator/sorted": "1.0.0",
     "@js-library/commitlint-config": "0.0.4",
+    "@node-loader/babel": "2.0.1",
     "@total-order/lex": "1.0.0",
     "@total-order/primitive": "1.0.1",
     "ava": "5.3.1",
@@ -104,22 +104,16 @@
     "files": [
       "test/src/**/*"
     ],
+    "nodeArguments": [
+      "--experimental-loader=@node-loader/babel"
+    ],
     "require": [
-      "regenerator-runtime/runtime",
-      "@babel/register"
+      "regenerator-runtime/runtime"
     ],
     "timeout": "1m"
   },
   "babel": {
     "sourceMaps": true,
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": "current node"
-        }
-      ]
-    ],
     "plugins": [
       [
         "transform-remove-console",
