--- a/package.json
+++ b/package.json
@@ -216,7 +216,8 @@
       "no-constant-condition": "off",
       "unicorn/prefer-math-trunc": "off",
       "unicorn/no-new-array": "off",
-      "no-negated-condition": "off"
+      "no-negated-condition": "off",
+      "unicorn/prefer-node-protocol": "off"
     },
     "overrides": [
       {
